<resources>
    <string name="add_item">Добавьте новую модель</string>
    <string name="app_name">Factory</string>
    <string name="app_name_after">Factory</string>
    <string name="text_bottom">Войдите в свою учётную запись</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="email">Email</string>
    <string name="pass">Пароль</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="sumForDay">Заработано за день: </string>
    <string name="sumForMonth">Заработано за месяц: </string>
    <string name="operations">операции</string>
    <string name="users">швеи</string>
    <string name="models">модели</string>
    <string name="profile">профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>