<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="51dp"
        android:text="@string/sumForDay"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:drawableTint="@color/tint" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginStart="34dp"
        android:layout_marginTop="57dp"
        android:text="@string/sumForMonth"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:drawableTint="@color/tint" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="27dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginStart="226dp"
        android:layout_marginTop="138dp"
        />

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="372dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="178dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <TableRow>
                <TextView
                    android:layout_weight="0.5"
                    android:text="№ и название операции"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="0.5"
                    android:text="Цена"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="0.5"
                    android:text="Размер"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="0.5"
                    android:text="Выполнено"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="0.5"
                    android:text="Сумма"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>
                <EditText android:id="@+id/operation"
                    android:layout_weight="0.5"
                    android:inputType="text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText android:id="@+id/price"
                    android:layout_weight="0.5"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText android:id="@+id/siz"
                    android:layout_weight="0.5"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText android:id="@+id/amount"
                    android:layout_weight="0.5"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/tvResult"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>
    </ScrollView>


</RelativeLayout>